--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </section>
 
 
-        <!-- Projects -->
+        <!-- Projects test-->
 
         <section id="projects" > 
             <div class="container col text-center">
